# Dynamic-Native-Plugin-Loader-for-Android

./: .gitignore  LICENSE  README.md  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  plugin_loader.cpp
app/src/main/java/com/all1eexxx/dynamicnativepluginloaderforandroid/: DexPluginLoader.kt  MainActivity.kt  PluginManager.kt  SoPluginLoader.kt  TreeCopier.kt
app/src/main/java/com/all1eexxx/plugix/: DexPluginLoader.kt  MainActivity.kt  PluginManager.kt  SoPluginLoader.kt  TreeCopier.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
plugins/AlertDialog_plugin/: AlertDialog_plugin.c  AlertDialog_plugin.h  CMakeLists.txt  build_AlertDialog_plugin.bat
plugins/CPPToast_plugin/: CMakeLists.txt  CPPToast_plugin.cpp  CPPToast_plugin.hpp  build_CPPToast_plugin.bat
plugins/GUI_plugin/: CMakeLists.txt  GUI_plugin.cpp  GUI_plugin.hpp  build_GUI_plugin.bat
plugins/JavaToast_plugin/: JavaToast_plugin.java  build_JavaToast_plugin.bat
plugins/KotlinToast_plugin/: KotlinToast_plugin.kt  build_KotlinToast_plugin.bat
plugins/RequestNotificationPermission_plugin/: CMakeLists.txt  RequestNotificationPermission_plugin.cpp  RequestNotificationPermission_plugin.hpp  build_RequestNotificationPermission_plugin.bat
plugins/Resource_plugin/: CMakeLists.txt  Resource_plugin.cpp  Resource_plugin.hpp  build_Resource_plugin.bat
plugins/Resource_plugin/res/: data.json
plugins/SendNotification_plugin/: CMakeLists.txt  SendNotification_plugin.cpp  SendNotification_plugin.hpp  build_SendNotification_plugin.bat
plugins/Toast_plugin/: CMakeLists.txt  Toast_plugin.cpp  Toast_plugin.hpp  build_Toast_plugin.bat
